# PhoenixOS

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .mailmap  LICENSE  README.md  build.sh  meson.build  migration_data.txt
autogen/: .gitignore  autogen_common.cpp  autogen_common.h  autogen_cpp.cpp  autogen_cpp.h  fast_export.sh  main.cpp  meson.build  readme.md  utils.cpp  utils.h
autogen/autogen_cuda/: autogen_cuda.cpp  autogen_cuda.h  collect.cpp  parser.cpp  worker.cpp
autogen/autogen_cuda/supported/11.3/: cuda_runtime_api.yaml  cudart_device_management.yaml  cudart_error_handling.yaml  cudart_execution_control.yaml  cudart_memory_management.yaml  readme.md
autogen/autogen_cuda/supported/11.3/docs/: cudart_device_management.md  cudart_direct3d_10_interoperability.md  cudart_direct3d_11_interoperability.md  cudart_direct3d_9_interoperability.md  cudart_driver_entry_point_access.md  cudart_egl_interoperability.md  cudart_error_handling.md  cudart_event_management.md  cudart_execution_control.md  cudart_external_resource_interoperability.md  cudart_graph_management.md  cudart_graphics_interoperabilit.md  cudart_memory_control.md  cudart_occupancy.md  (+11 more)
autogen/pos/include/: eval_configs.h.in  log.h.in  meson.build
microbench/memcpy_performance/: CMakeLists.txt  d2d.cu  main.cu  profile.txt  readme.md  run_test.sh
microbench/memcpy_performance/analyse/: analyse.py
microbench/memcpy_performance/analyse/pcie_model/: __init__.py  eth.py  mem_bw.py  niantic.py  pcie.py  simple_nic.py  util.py
microbench/ptx_compile_time/: CMakeLists.txt  main.cu
pos/cli/: CMakeLists.txt  cli.h  command_format.h  main.cpp  meson.build  migrate.cpp
pos/cli/src/: dump.cpp  help.cpp  main.cpp  migrate.cpp  predump.cpp  restore.cpp  start.cpp  trace.cpp
pos/include/: agent.h  api_context.h  checkpoint.h  checkpoint_o0.h  checkpoint_o1.h  checkpoint_o1_o2.h  client.h  command.h  common.h  common.h.in  config.h.in  control_plane.h  dag.h  eval_configs.h.in  handle.h  log.h  log.h.in  meson.build  metrics.h  migration.h  oob.cpp  oob.h  parser.h  resource.h  runtime.h  runtime_configs.h.in  service.h  switches.h.in  trace.h  transport.h  worker.h  workspace.h
pos/include/_daemon_options/: config.h.in  meson.build  switches.h.in
pos/include/control_plane/: controller.h
pos/include/metrics/: counter.h  reducer.h  sequence.h  ticker.h
pos/include/oob/: agent.h  ckpt.h  ckpt_dump.h  ckpt_predump.h  restore.h  trace.h
pos/include/proto/: apicxt.proto  client.proto  handle.proto
pos/include/remoting/: agent.h
pos/include/trace/: base.h  counter.h  reducer.h  tick.h
pos/include/utils/: bipartite_graph.h  command_caller.h  config_parser.h  lockfree_queue.h  mempool.h  redis_adaptor.h  serializer.h  string.h  system.h  timer.h  timestamp.h
pos/include/utils/readerwriterqueue/: atomicops.h  readerwriterqueue.h
test/: meson.build
test/test_cuda/: main.cpp  test_cuda_common.h  test_cuda_malloc.cpp
test/test_cuda/apis/: test_cuda_malloc.cpp
unittest/: CMakeLists.txt  hidden.cpp  main.cu  meson.build  pos_unittest_hidden  readme.md  unittest.h
unittest/apis/: base.h  context.cpp  cublas.cpp  device.cpp  memory.cpp  stream.cu
unittest/cuda/: CMakeLists.txt  hidden.cpp  main.fatbin  perapi.cu  pos.yaml  unittest.h
unittest/cuda/apis/: base.h  context.cpp  cublas.cpp  device.cpp  memory.cpp  stream.cu
unittest/cuda/deprecated/: client.cpp  pos_unittest_basic
unittest/cuda/include/: utils.h
unittest/cuda/kernel_parse/: main.cpp
unittest/cuda/patcher/: main.cc  meson.build
unittest/cuda/src/: utils.cpp
unittest/deprecated/: basic.cpp  pos_unittest_client  pos_unittest_server  server.cpp
unittest/src/: utils.cpp
unittest/test_cuda/: main.cpp  test_cuda_common.cpp  test_cuda_common.h
unittest/test_cuda/apis/: test_cuda_malloc.cpp  test_cuda_malloc_free.cpp
unittest/test_cuda/apis/assets/: main.cu  sm70_72_75_80_86.fatbin
unittest/test_cuda/apis/cublas/: cublasCreatev2.cpp  cublasSetMathMode.cpp  cublasSetStream.cpp  cublasSgemmStridedBatched.cpp  cublasSgemm_v2.cpp
unittest/test_cuda/apis/cuda_driver/: cuDeviceGet.cpp  cuDevicePrimaryCtxGetState.cpp  cuLaunchKernel.cpp  cuModuleGetFunction.cpp  cuModuleLoad.cpp  cuModuleLoadData.cpp
unittest/test_cuda/apis/cuda_runtime/: cudaDeviceGetAttribute.cpp  cudaEventCreate.cpp  cudaEventCreateWithFlags.cpp  cudaEventDestroy.cpp  cudaEventQuery.cpp  cudaEventRecord.cpp  cudaEventRecordWithFlags.cpp  cudaFree.cpp  cudaFuncGetAttributes.cpp  cudaFuncGetAttributes.cu  cudaGetDevice.cpp  cudaGetDeviceCount.cpp  cudaGetDeviceProperties.cpp  cudaGetErrorString.cpp  cudaGetLastError.cpp  cudaLaunchKernel.cpp  cudaLaunchKernel.cu  cudaMalloc.cpp  cudaMemcpyAsyncD2D.cpp  cudaMemcpyAsyncD2H.cpp  cudaMemcpyAsyncH2D.cpp  cudaMemcpyD2D.cpp  cudaMemcpyD2H.cpp  cudaMemcpyH2D.cpp  cudaMemset.cpp  cudaMemsetAsync.cpp  cudaPeekAtLastError.cpp  cudaSetDevice.cpp  cudaStreamIsCapturing.cpp  cudaStreamSynchronize.cpp
utils/cudam/: CMakeLists.txt  README.md
utils/cudam/api_interceptor_gen/: api_model.py  file_head.py  function_template.py  global_config.py  main.py  readme.md  test.c
utils/cudam/api_interceptor_gen/headers/: cublas_api.h  cuda.h  cuda_memory_apis.h  cuda_runtime_api.h
utils/cudam/api_interceptor_gen/outputs/: cublas_v2_api.cpp  cudnn.cpp  cufft.cpp  cufftw.cpp  curand.cpp  cusolver_dn.cpp  cusolver_mg.cpp  cusolver_rf.cpp  cusolver_sp.cpp  cusparse.cpp  driver_api.cpp  nvml.cpp  runtime_api.cpp  summary_api.py
utils/cudam/doc/: cudam_logo.drawio
utils/cudam/samples/: conv2d.py  linear.py  norm2d.py  test.py  train.py
utils/cudam/samples/utils/: ResNet.py  readData.py
utils/cudam/scripts/: check_cuda_libs.sh
utils/cudam/src/: cudam.h  dl_intercept.cpp  log.h  utils.cpp  utils.h
utils/cudam/src/api_counter/: api_counter.cpp  api_counter.h
utils/cudam/src/buffer_manager/: buffer_analyzer.py  buffer_manager.cpp  buffer_manager.h  buffer_manager_interceptors.cpp
utils/cudam/src/segfault_catch/: i386-signal.h  segvcatch.cpp  segvcatch.h  x86_64-signal.h
utils/cudam/test/: CMakeLists.txt  main.cu
(+468 files in other folders)
